--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "axios": "^0.24.0",
     "dayjs": "^1.10.7",
     "echarts": "^5.2.2",
+    "lodash": "^4.17.21",
     "mapbox-gl": "1.13.2",
+    "qs": "^6.10.1",
     "vue": "^3.2.16",
     "vue-router": "4"
   },
   "devDependencies": {
     "@types/mapbox-gl": "1.13.2",
+    "@types/qs": "^6.9.7",
     "@vitejs/plugin-vue": "^1.9.4",
     "@vue/compiler-sfc": "^3.2.20",
     "less": "^4.1.2",
