--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
-  "name": "tsvue3",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
-  },
-  "dependencies": {
-    "@juggle/resize-observer": "^3.3.1",
-    "ant-design-vue": "^3.0.0-alpha.8",
-    "axios": "^0.24.0",
-    "dayjs": "^1.10.7",
-    "echarts": "^5.2.2",
-    "lodash": "^4.17.21",
-    "mapbox-gl": "1.13.2",
-    "nprogress": "^0.2.0",
-    "qs": "^6.10.1",
-    "vue": "^3.2.16",
-    "vue-router": "4"
-  },
-  "devDependencies": {
-    "@types/mapbox-gl": "1.13.2",
-    "@types/nprogress": "^0.2.0",
-    "@types/qs": "^6.9.7",
-    "@vitejs/plugin-vue": "^1.9.4",
-    "@vue/compiler-sfc": "^3.2.20",
-    "less": "^4.1.2",
-    "typescript": "^4.4.4",
-    "vite": "^2.6.13",
-    "vue-tsc": "^0.28.10"
-  }
+    "name": "tsvue3",
+    "version": "0.0.0",
+    "license": "MIT",
+    "scripts": {
+        "dev": "vite",
+        "build": "vue-tsc --noEmit && vite build",
+        "serve": "vite preview"
+    },
+    "dependencies": {
+        "@juggle/resize-observer": "^3.3.1",
+        "ant-design-vue": "^3.0.0-alpha.9",
+        "axios": "^0.24.0",
+        "dayjs": "^1.10.7",
+        "echarts": "^5.2.2",
+        "jsencrypt": "^3.2.1",
+        "lodash": "^4.17.21",
+        "mapbox-gl": "1.13.2",
+        "nprogress": "^0.2.0",
+        "qs": "^6.10.1",
+        "vue": "^3.2.16",
+        "vue-router": "4"
+    },
+    "devDependencies": {
+        "@types/mapbox-gl": "1.13.2",
+        "@types/nprogress": "^0.2.0",
+        "@types/qs": "^6.9.7",
+        "@vitejs/plugin-vue": "^1.9.4",
+        "@vue/compiler-sfc": "^3.2.20",
+        "less": "^4.1.2",
+        "typescript": "^4.4.4",
+        "vite": "^2.6.13",
+        "vue-tsc": "^0.28.10"
+    }
 }
