--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     },
     "devDependencies": {
         "@types/mapbox-gl": "1.13.2",
+        "@types/node": "^16.11.8",
         "@types/nprogress": "^0.2.0",
         "@types/qs": "^6.9.7",
         "@vitejs/plugin-vue": "^1.9.4",
         "@vue/compiler-sfc": "^3.2.20",
         "less": "^4.1.2",
+        "svg-sprite-loader": "^6.0.11",
         "typescript": "^4.4.4",
         "vite": "^2.6.13",
         "vue-tsc": "^0.28.10"
