--- a/package.json
+++ b/package.json
@@ -1,37 +1,39 @@
 {
-    "name": "tsvue3",
-    "version": "0.0.0",
-    "license": "MIT",
-    "scripts": {
-        "dev": "vite",
-        "build": "vue-tsc --noEmit && vite build",
-        "serve": "vite preview"
-    },
-    "dependencies": {
-        "@juggle/resize-observer": "^3.3.1",
-        "ant-design-vue": "^3.0.0-alpha.9",
-        "axios": "^0.24.0",
-        "dayjs": "^1.10.7",
-        "echarts": "^5.2.2",
-        "jsencrypt": "^3.2.1",
-        "lodash": "^4.17.21",
-        "mapbox-gl": "1.13.2",
-        "nprogress": "^0.2.0",
-        "qs": "^6.10.1",
-        "vue": "^3.2.16",
-        "vue-router": "4"
-    },
-    "devDependencies": {
-        "@types/mapbox-gl": "1.13.2",
-        "@types/node": "^16.11.8",
-        "@types/nprogress": "^0.2.0",
-        "@types/qs": "^6.9.7",
-        "@vitejs/plugin-vue": "^1.9.4",
-        "@vue/compiler-sfc": "^3.2.20",
-        "less": "^4.1.2",
-        "svg-sprite-loader": "^6.0.11",
-        "typescript": "^4.4.4",
-        "vite": "^2.6.13",
-        "vue-tsc": "^0.28.10"
-    }
+  "name": "tsvue3",
+  "version": "0.0.0",
+  "license": "MIT",
+  "scripts": {
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "serve": "vite preview"
+  },
+  "dependencies": {
+    "@juggle/resize-observer": "^3.3.1",
+    "ant-design-vue": "^3.2.0",
+    "axios": "^0.26.1",
+    "dayjs": "^1.11.1",
+    "echarts": "^5.3.2",
+    "jsencrypt": "^3.2.1",
+    "lodash": "^4.17.21",
+    "mapbox-gl": "1.13.2",
+    "nprogress": "^0.2.0",
+    "qs": "^6.10.3",
+    "vue": "^3.2.33",
+    "vue-router": "4",
+    "vxe-table": "^4.2.2",
+    "xe-utils": "^3.5.4"
+  },
+  "devDependencies": {
+    "@types/mapbox-gl": "1.13.2",
+    "@types/node": "^17.0.25",
+    "@types/nprogress": "^0.2.0",
+    "@types/qs": "^6.9.7",
+    "@vitejs/plugin-vue": "^2.3.1",
+    "@vue/compiler-sfc": "^3.2.33",
+    "less": "^4.1.2",
+    "svg-sprite-loader": "^6.0.11",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.5",
+    "vue-tsc": "^0.34.7"
+  }
 }
