--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.21",
     "mapbox-gl": "1.13.2",
     "nprogress": "^0.2.0",
+    "pinia": "^2.0.13",
     "qs": "^6.10.3",
     "vue": "^3.2.33",
     "vue-router": "4",
