--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
     "@juggle/resize-observer": "^3.3.1",
-    "ant-design-vue": "^3.2.0",
-    "axios": "^0.26.1",
+    "ant-design-vue": "^3.2.2",
+    "axios": "^0.27.1",
     "dayjs": "^1.11.1",
     "echarts": "^5.3.2",
     "jsencrypt": "^3.2.1",
@@ -21,12 +22,12 @@
     "qs": "^6.10.3",
     "vue": "^3.2.33",
     "vue-router": "4",
-    "vxe-table": "^4.2.2",
+    "vxe-table": "^4.2.3",
     "xe-utils": "^3.5.4"
   },
   "devDependencies": {
     "@types/mapbox-gl": "1.13.2",
-    "@types/node": "^17.0.25",
+    "@types/node": "^17.0.29",
     "@types/nprogress": "^0.2.0",
     "@types/qs": "^6.9.7",
     "@vitejs/plugin-vue": "^2.3.1",
@@ -34,7 +35,7 @@
     "less": "^4.1.2",
     "svg-sprite-loader": "^6.0.11",
     "typescript": "^4.6.3",
-    "vite": "^2.9.5",
-    "vue-tsc": "^0.34.7"
+    "vite": "^2.9.6",
+    "vue-tsc": "^0.34.10"
   }
 }
